[gd_scene load_steps=5 format=3 uid="uid://vxyqfv0yjs65"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_dvri0"]
[ext_resource type="PackedScene" uid="uid://bhmhautldw8ts" path="res://scenes/shader_overlay.tscn" id="1_l755q"]
[ext_resource type="FontFile" uid="uid://clxqmevbasqw4" path="res://assets/VCR_OSD_MONO_1.001.ttf" id="2_w38t8"]

[sub_resource type="LabelSettings" id="LabelSettings_hkya1"]
font = ExtResource("2_w38t8")
font_size = 25

[node name="Pause Menu" type="Control"]
process_mode = 3
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_dvri0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.105882, 0.105882, 0.105882, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(300, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -548.0
offset_top = -295.0
offset_right = -248.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_w38t8")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "PAUSE"

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
offset_left = 156.0
offset_top = 35.0
offset_right = 163.0
offset_bottom = 63.0
mouse_filter = 2

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 1
offset_left = 170.0
offset_top = 35.0
offset_right = 177.0
offset_bottom = 63.0
mouse_filter = 2

[node name="SFX Slider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 109.0
offset_top = -8.0
offset_right = -115.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -124.0
offset_right = 20.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2
text = "Volume"
label_settings = SubResource("LabelSettings_hkya1")

[node name="Resume" type="Button" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -73.5
offset_top = -146.0
offset_right = 75.5
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_w38t8")
theme_override_font_sizes/font_size = 40
text = "Resume"
flat = true

[node name="Quit" type="Button" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -73.5
offset_top = -92.0
offset_right = 75.5
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_w38t8")
theme_override_font_sizes/font_size = 40
text = "Quit"
flat = true

[node name="Shader Overlay" parent="." instance=ExtResource("1_l755q")]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = -1.0
offset_right = 0.0
offset_bottom = -1.0

[connection signal="value_changed" from="SFX Slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
